# bveri-exercises-hs2024

./: .gitignore  Dockerfile  README.md  pyproject.toml
notebooks/01_pytorch_and_images/: pytorch_and_images.ipynb
notebooks/02_mlp_and_images/: mlp_and_images.ipynb
notebooks/03_cnns/: cnns.ipynb
notebooks/04_classification/: classification.ipynb
src/dl_cv_lectures/: classification.py  classifier.py  transform.py  utils.py  visualize.py
src/dl_cv_lectures/data/: cats_vs_dogs.py  concrete_cracks.py  eurosat.py  image_folder.py  pattern.py  scene_classification.py  shapes.py  stanford_background.py
